# SIN-Code-SCKG-Tool

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  pyproject.toml
src/sckg/: __init__.doc.md  __init__.py  adr.doc.md  adr.py  cli.doc.md  cli.py  communities.doc.md  communities.py  cross_repo.doc.md  cross_repo.py  dashboard.doc.md  dashboard.py  dead_code.doc.md  dead_code.py  graph.doc.md  graph.py  hotpaths.doc.md  hotpaths.py  html_generator.doc.md  html_generator.py  hybrid_search.doc.md  hybrid_search.py  parser.doc.md  parser.py  performance.doc.md  performance.py  search.doc.md  search.py  similarity.doc.md  similarity.py  watcher.doc.md  watcher.py
src/sckg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/sckg/api/: resolvers.doc.md  resolvers.py  schema.doc.md  schema.py  server.doc.md  server.py
src/sckg/parsers/: __init__.doc.md  __init__.py  base.py  go_parser.doc.md  go_parser.py  python_parser.doc.md  python_parser.py  typescript_parser.doc.md  typescript_parser.py
tests/: test_agents_md.doc.md  test_agents_md.py  test_api.py  test_cli.py  test_communities.doc.md  test_communities.py  test_cross_repo.doc.md  test_cross_repo.py  test_dashboard.py  test_dead_code.doc.md  test_dead_code.py  test_dispatcher.py  test_go_parser.doc.md  test_go_parser.py  test_graph.py  test_hotpaths.py  test_hybrid_search.py  test_parser.py  test_performance.py  test_search.py  test_similarity.py  test_typescript_parser.py  test_watcher.py
tests/fixtures/: sample_graph.json
tests/fixtures/dead_code_sample/: main.doc.md  main.py  utils.doc.md  utils.py
(+7 files in other folders)
